src/objects/QIPP_Benefit_Conversion_Rate__c.object
<CustomObject>
    <description>This object captures the Unit Conversion Rate for Improvement Measures present in the QIPP Benefit Conversion Table.</description>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>SCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PaCo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLATFORMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Improvement_Measure__c</fullName>
        <label>Improvement Measure</label>
        <referenceTo>QIPP_Benefit_Conversion_Table__c</referenceTo>
        <relationshipLabel>Conversion Rate</relationshipLabel>
        <relationshipName>Conversion_Rate</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <formula>TEXT(Improvement_Measure__r.Unit_of_Measure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit of Measure</label>
        <type>Text</type>
    </fields>
    <label>QIPP Benefit Conversion Rate</label>
    <nameField>
        <displayFormat>BCR-{0000}</displayFormat>
        <label>QIPP Benefit Conversion Rate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversion Rate</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Conversion_Rate</fullName>
        <active>true</active>
        <description>When UOM is &quot;Euro&quot;, Conversion Rate should be 1.</description>
        <errorConditionFormula>AND(TEXT(Improvement_Measure__r.Unit_of_Measure__c) = &apos;Euro&apos;,  Conversion_Rate__c  &lt;&gt; 1)</errorConditionFormula>
        <errorDisplayField>Conversion_Rate__c</errorDisplayField>
        <errorMessage>When Unit of Measure is &quot;Euro&quot;, Conversion Rate should be 1.</errorMessage>
    </validationRules>
</CustomObject>